# Sovereign-Monad-Ecosystem

./: .editorconfig  .girignore  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
Shaliah Agents/: The Shaliah Protocol.txt  perplex and user idea expanding.docx
docs/: AGENT_DESIGN_DECLARATION_TEMPLATE.md  ANTIKYTHERA INTEGRATION REVIEW.txt  BUILD_EXECUTION_FLOW.md  CANONICAL_SYNC_DISCIPLINE.md  CAPITAL_BUDGET.md  CHARTER.md  CULTURAL_CRITICAL_MASS.md  ECOSYSTEM_BUILD_MAP.md  FIRST_MESHALEACH_AUDIT.md  GNOSIS_V2_PRETRAIN_AUDIT.md  GNOSIS_V2_TRAINING_LOG.md  GO_LIVE_EXECUTION.md  HEPAR_INTERNAL_ARCHITECTURE.md  HUMAN_CAPABILITY_DRIFT_METRICS.md  LEGACY_COMPONENTS.md  LICENSE.commercial.md  LICENSE.md  LICENSING.md  LOGOC_ASSESSMENT_HANDOFF.md  LOGOC_v5_TESTING_DIAGNOSTICS_ANALYSIS.md  OPEN_FIRST.md  PHASE2_MIGRATION_PLAN.md  PROJECT_STATE.json  PROJECT_STATE.md  PROJECT_STATUS_2026-06-22.md  PROJECT_STATUS_2026-06-23.md  REPO_STRUCTURE_MAP.md  SHALIAH_AGENTS.md  SHALIAH_ONBOARDING_ARC.md  SHALIAH_VISION_PROPOSALS.md  SHARED_AI_COLLABORATION_CHARTER.md  SOVEREIGN_MONAD_ECOSYSTEM_MASTER_OPERATING_FILE_v2.4.0.md  SOVEREIGN_MONAD_ECOSYSTEM_MASTER_OPERATING_FILE_v2.5.2.md  STEWARD_COUNCIL.md  THEO_TECHNO_COSMO.md  VOX_NARRATIVE.md  WHAT_MAKES_GNOSIS_REAL.md  implementation_layer6_fourth_figure.md  implementation_layer6_letter_pairs.md  implementation_plan.md  (+4 more)
gnosis-training/: .gitignore  README.md  package.json  pyproject.toml
gnosis-training/checkpoints/gnosis-v2.0-reward/: MODEL_CARD.md  split.json  training_metrics.json
gnosis-training/data/: generate_pairs.py  preference_pairs_ALL.jsonl  test_generate_pairs.py
gnosis-training/scripts/: dry-run.sh  prepare-feedstock.mjs  prepare-worksheet-feedstock.mjs  promote_cat1_5_8_grow.py  promote_cat5_6_grow.py  promote_cat6_8_pairs.py  promote_ccm_pairs.py  promote_to_250.py  promote_ums_vector2_pairs.py  promote_ums_vector2_xc_closeout.py  promote_user_pairs.py
gnosis-training/src/gnosis_training/: __init__.py  __main__.py  cli.py  config.py  dataset.py  eval.py  event.py  grpo.py  metrics.py  ppo.py  preference.py  registry.py  reward.py  seed.py  sft.py  stage2_v2.py  synth_pairs.py  tracking.py  ttc_signals.py
gnosis-training/tests/: conftest.py  test_config.py  test_config_dry_run.py  test_dataset.py  test_event.py  test_metrics.py  test_preference.py  test_seed.py  test_smoke_imports.py  test_stage2_v2_audit.py  test_synth_pairs.py  test_ttc_signals.py  test_validate_worksheet.py
gnostic-engine/: README.md  package.json  pyproject.toml  run_sge.ps1
gnostic-engine/api/: gnostic_api.py  gnostic_bridge.py  heartbeat_client.py  smoke_typed_endpoint.py
gnostic-engine/dashboard/: app.py
gnostic-engine/notes/: 1. Docker Compose API Orchestration.txt  1. Documentation Header Volumetric.txt  1. Lane B Bedrock Rules (The Verifi.txt  3. Unit Test Supply Chain Attack (V.txt  API Endpoints PBFP Pneumatic Intake.txt  Final System Manifest.txt  README.md  SGE REST API Integration.txt  The 4 Identifying Variables (MCTS S.txt  blnk coolaown.txt  foraging.py (The Data-PBFP Layer).txt  import time.docx  🏛.docx  🧬 Python Math for the Polarization.txt
gnostic-engine/setup/: build_sge_system.py
gnostic-engine/src/gnostic_engine/: __init__.py  logoc_tier.py  logoc_trade.py
gnostic-engine/src/gnostic_engine/api/: __init__.py  live_state.py  routes.py
gnostic-engine/src/gnostic_engine/classification/: __init__.py  _manifold_proxy.py  heuristic.py
gnostic-engine/src/gnostic_engine/constitution/: __init__.py  scorer.py  types.py
gnostic-engine/src/gnostic_engine/constraints/: __init__.py  identity.py  loader.py  scorer.py  types.py  window_log.py
gnostic-engine/src/gnostic_engine/core/: gnostic_engine.py  logoc_pipeline.py  pulfrich_watcher.py  volumetric_scanner.py
gnostic-engine/src/gnostic_engine/foraging/: market_forager.py
gnostic-engine/src/gnostic_engine/orchestration/: __init__.py  sign_builder.py
gnostic-engine/src/gnostic_engine/persistence/: __init__.py  event_log.py  replay.py
gnostic-engine/src/gnostic_engine/utils/: math.py
gnostic-engine/test/: watcher.py
gnostic-engine/tests/: _parity_shim.py  conftest.py  test_api_routes.py  test_boundary_blink.py  test_classifier.py  test_event_log.py  test_logoc_tier.py  test_orchestrator.py  test_scorer.py  test_token_resolution.py  test_ttc_constraints.py  test_ttc_window_log.py
logs/: PROGRESS_REPORT_2026-06-20.md  data-rail-activation.json  gnosis_bridge_report.md
monad-ecosystem/: README.md  docker-compose.yml  pnpm-workspace.docker.yaml  score_utils.py  up.ps1
monad-ecosystem/agents/monad-mev/: AGENTS.md  HEPAR_FULL_OPERABILITY_SPECIFICATION.md  HEPAR_REVIEW_FINAL_SUMMARY_2026-05-05.md  SIX_ORGAN_UPGRADE_COMPLETION_SUMMARY_2026-05-05.md  STATUS.md  pyproject.toml
monad-ecosystem/agents/monad-mev/.runtime_state/markout/: markout_summary.json  markout_trades.json
monad-ecosystem/agents/monad-mev/deployments/: emergence-recorder-phase1a.json  phase1a-mainnet-proof.json  slot-source-handoff-phase1a.json
monad-ecosystem/agents/monad-mev/docs/: x402-integration.md
monad-ecosystem/agents/monad-mev/scripts/: monad_price_fetcher.py  shadow_markout_hardened.py  test_x402_auth.py  x402_quicknode.py
monad-ecosystem/agents/monad-mev/scripts/.runtime_state/: cardia_state.json
monad-ecosystem/agents/monad-mev/scripts/.runtime_state/markout/: markout_summary.json  markout_trades.json
notes/: SGE Deep Dive(1) — AI Researchers  ML.txt
scripts/: apply_corrections_v5.10.py  apply_corrections_v5.6.py  apply_corrections_v5.9.py  bootstrap-local.ps1  bootstrap.ps1  check-council-registry.mjs  check-numeric-drift.mjs  check-schedule-schema-drift.mjs  check-sign-types-drift.mjs  check-temple-grid.mjs  check-ttcl-artifacts-drift.mjs  copy_to_notebooklm.ps1  dump-failing-schedule.mts  gen-council-registry.mjs  gen-enheduanna-temple-grid.mjs  generate_file_mapping_manifest.py  meshaleach-ui-walk.mjs  pulse-test.mjs  regenerate-canonical-schedule-fixture.mts  status.ps1  sync-canonical.ps1  (+2 more)
(+627 files in other folders)
